--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
   <artifactId>PageObjectModelFramework</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
+  
  <dependencies> 
  <!-- Selenium -->
   <dependency>
@@ -43,7 +44,12 @@
 	
    </dependencies>
    
-   <build>
+  <properties>
+    <baseFolder>${basedir}</baseFolder>
+</properties>
+<build>
+    <!-- directory ${baseFolder}/target /directory -->
+  	
   	<plugins>
   		<!-- Maven Compiler -->
    		<plugin>
@@ -68,6 +74,7 @@
            		</suiteXmlFiles>
            </configuration>
    		</plugin>
-  	</plugins>  
+  	</plugins> 
+  	<directory>${baseFolder}/target</directory> 
   </build>
 </project>
