--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,9 @@
   <groupId>Framework</groupId>
   <artifactId>PageObjectModelFramework</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
   
  <dependencies> 
  <!-- Selenium -->
